--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
       </nav>
       <div class="app"></div>
+      <div class="appTour"></div>
       <footer>
         <div class="logo">travel-fly</div>
         <div class="copyright">
